--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".Payment">
+    tools:context=".Payment"
+    >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -54,52 +55,59 @@
                 app:spb_animateToCurrentProgressState="true"
                 app:spb_checkStateCompleted="true"/>
             <LinearLayout
-                android:layout_width="428dp"
+
+                android:id="@+id/enlayout_en"
+
+                android:layout_width="match_parent"
+                android:layout_marginEnd="15dp"
                 android:layout_height="70dp"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="5dp"
-                    android:layout_height="58dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="vertical"                  >
 
                     <ImageView
+                        android:layout_marginTop="0dp"
                         android:layout_width="53dp"
                         android:layout_height="32dp"
-                        android:layout_margin="5dp"
+                        android:layout_marginStart="8dp"
                         android:src="@drawable/calendar_book" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="23dp"
-                    android:layout_height="60dp"
+                    android:layout_width="5dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="56dp"
-                        android:layout_height="45dp"
-                        android:layout_margin="5dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_width="48dp"
+                        android:layout_height="49dp"
                         android:src="@drawable/total_tickets" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="23dp"
-                    android:layout_height="54dp"
+                    android:layout_width="5dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="vertical"   >
 
                     <ImageView
-                        android:layout_width="55dp"
-                        android:layout_height="34dp"
-                        android:layout_margin="5dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_width="53dp"
+                        android:layout_height="32dp"
+                        android:layout_marginStart="29dp"
                         android:src="@drawable/credit_card" />
 
                 </LinearLayout>
@@ -112,9 +120,10 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="40dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_width="53dp"
                         android:layout_height="32dp"
-                        android:layout_margin="5dp"
+                        android:layout_gravity="end"
                         android:src="@drawable/download" />
 
                 </LinearLayout>
@@ -122,8 +131,87 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/enlayout_ar"
+                android:layout_height="70dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="0dp"
+                android:orientation="horizontal">
 
-        <LinearLayout
+                <LinearLayout
+                    android:layout_width="5dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"                  >
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_width="53dp"
+                        android:layout_height="32dp"
+                        android:layout_marginStart="8dp"
+                        android:src="@drawable/download" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="5dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_width="53dp"
+                        android:layout_height="32dp"
+                        android:layout_marginStart="14dp"
+                        android:src="@drawable/credit_card" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="5dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"   >
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_marginStart="26dp"
+                        android:layout_width="48dp"
+                        android:layout_height="49dp"
+                        android:src="@drawable/total_tickets"
+                         />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="23dp"
+                    android:layout_height="54dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_width="53dp"
+                        android:layout_height="32dp"
+
+                        android:layout_gravity="end"
+                        android:src="@drawable/calendar_book" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
