--- a/app/src/main/res/layout/activity_billing__contact.xml
+++ b/app/src/main/res/layout/activity_billing__contact.xml
@@ -51,38 +51,43 @@
                 app:spb_stateDescriptionColor="#808080"
                 app:spb_animateToCurrentProgressState="true"
                 app:spb_checkStateCompleted="true"/>
+
             <LinearLayout
-                android:layout_width="428dp"
+                android:id="@+id/enlayout_en"
+                android:layout_width="match_parent"
+                android:layout_marginEnd="15dp"
                 android:layout_height="70dp"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="5dp"
-                    android:layout_height="58dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
                     <ImageView
+                        android:layout_marginTop="0dp"
                         android:layout_width="53dp"
                         android:layout_height="32dp"
-                        android:layout_margin="5dp"
+                        android:layout_marginStart="8dp"
                         android:src="@drawable/calendar_book" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="23dp"
-                    android:layout_height="60dp"
+                    android:layout_width="5dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="44dp"
-                        android:layout_height="33dp"
-                        android:layout_margin="5dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_width="53dp"
+                        android:layout_height="32dp"
+                        android:layout_marginStart="19dp"
                         android:src="@drawable/total_tickets" />
 
                 </LinearLayout>
@@ -95,9 +100,10 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="59dp"
-                        android:layout_height="42dp"
-                        android:layout_margin="5dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginStart="33dp"
+                        android:layout_width="48dp"
+                        android:layout_height="49dp"
                         android:src="@drawable/credit_card" />
 
                 </LinearLayout>
@@ -110,10 +116,87 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="40dp"
+                        android:layout_gravity="end"
+                        android:layout_marginTop="0dp"
+                        android:layout_width="53dp"
                         android:layout_height="32dp"
-                        android:layout_margin="5dp"
                         android:src="@drawable/download" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/enlayout_ar"
+                android:layout_height="70dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="0dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="5dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_width="53dp"
+                        android:layout_height="32dp"
+                        android:layout_marginStart="8dp"
+                        android:src="@drawable/download" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="5dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_marginStart="19dp"
+                        android:layout_width="48dp"
+                        android:layout_height="49dp"
+                        android:src="@drawable/credit_card"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="23dp"
+                    android:layout_height="54dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_width="53dp"
+                        android:layout_height="32dp"
+                        android:layout_marginStart="25dp"
+                        android:src="@drawable/total_tickets" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="23dp"
+                    android:layout_height="54dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_width="53dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="end"
+                        android:src="@drawable/calendar_book" />
 
                 </LinearLayout>
 
