--- a/app/src/main/res/layout/activity_home_page_.xml
+++ b/app/src/main/res/layout/activity_home_page_.xml
@@ -48,7 +48,8 @@
                         android:layout_gravity="center"
                         android:layout_margin="5dp"
                         android:background="?attr/selectableItemBackground"
-                        android:src="@drawable/more" />
+                        android:textAppearance="@style/AppTheme"
+                        />
 
 
                 </LinearLayout>
