--- a/app/src/main/res/layout/activity_home_page_.xml
+++ b/app/src/main/res/layout/activity_home_page_.xml
@@ -48,8 +48,7 @@
                         android:layout_gravity="center"
                         android:layout_margin="5dp"
                         android:background="?attr/selectableItemBackground"
-                        android:textAppearance="@style/AppTheme"
-                        />
+                        android:src="@drawable/more" />
 
 
                 </LinearLayout>
