--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -287,8 +287,7 @@
                                         android:layout_weight="1"
                                         android:text="@string/date"
                                         android:textColor="@color/dark_gray"
-                                        android:textSize="25sp" />
-
+                                        android:textSize="25sp"
                                         android:textAppearance="@style/AppTheme"
                                         android:textStyle="bold" />
 
@@ -301,7 +300,7 @@
                                         android:text="dbdfbdfbdfb"
                                         android:textAppearance="@style/AppTheme"
                                         android:textColor="@color/black"
-                                        android:textSize="20sp" />
+                                        android:textSize="23sp" />
 
 
                                         android:textSize="25sp" />
@@ -310,7 +309,7 @@
 
                                 <LinearLayout
                                     android:layout_width="90dp"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="101dp"
                                     android:layout_margin="5dp"
                                     android:layout_weight="1"
                                     android:orientation="vertical">
@@ -322,27 +321,26 @@
                                         android:layout_weight="1"
                                         android:text="@string/price"
                                         android:textColor="@color/dark_gray"
-                                        android:textSize="25sp" />
-
+                                        android:textSize="25sp"
                                         android:textAppearance="@style/AppTheme"
                                         android:textStyle="bold"
 
-                                        />
+                                    />
 
                                     <TextView
                                         android:id="@+id/price_total"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_margin="3dp"
-                                        android:layout_weight="1"
                                         android:layout_marginStart="10dp"
+                                        android:layout_weight="1"
                                         android:text="dfbdffdghdf"
                                         android:textColor="@color/black"
-                                        android:textSize="20sp" />
+                                        android:textSize="23sp" />
 
-                                        android:textAppearance="@style/AppTheme"
+                                    android:textAppearance="@style/AppTheme"
 
-                                        android:textSize="25sp" />
+                                    android:textSize="25sp" />
                                 </LinearLayout>
 
 
